--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,3 +1,16 @@
 .user-panel>.info {
 	position: unset;
 }
+.images_area {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.p_image {
+	width: 200px;
+	display: inline-block;
+	margin: 10px;
+	text-align: center;
+}
+.p_image img{
+	width: 100%;
+}
